--- a/imports/ui/styles/_app.scss
+++ b/imports/ui/styles/_app.scss
@@ -1,1 +1,5 @@
 
+/*********************************
+   Components
+*********************************/
+@import "{}/imports/ui/styles/components/spinner.scss";
