added fallback method for zipcode if no geolocation

--- a/imports/ui/styles/_app.scss
+++ b/imports/ui/styles/_app.scss
@@ -3,3 +3,4 @@
    Components
 *********************************/
 @import "{}/imports/ui/styles/components/spinner.scss";
+@import "{}/imports/ui/styles/components/zip-form.scss";
