fetching top news

--- a/imports/ui/styles/_app.scss
+++ b/imports/ui/styles/_app.scss
@@ -1,5 +1,13 @@
 
 /*********************************
+   Base
+*********************************/
+@import "{}/imports/ui/styles/base/reset.scss";
+
+
+
+
+/*********************************
    Components
 *********************************/
 @import "{}/imports/ui/styles/components/spinner.scss";
