added map component with places reducer

--- a/imports/ui/styles/_app.scss
+++ b/imports/ui/styles/_app.scss
@@ -17,6 +17,8 @@
 @import "{}/imports/ui/styles/components/zip-form.scss";
 
 @import "{}/imports/ui/styles/components/weather.scss";
+@import "{}/imports/ui/styles/components/news.scss";
+@import "{}/imports/ui/styles/components/map.scss";
 
 
 
