--- a/imports/ui/styles/components/_map.scss
+++ b/imports/ui/styles/components/_map.scss
@@ -9,9 +9,10 @@
     flex-direction: row;
     width: 100%;
     height: 500px;
+    justify-content: space-between;
 
     #map {
-      width: 60%;
+      width: 57%;
     }
 
     #places-list {
@@ -19,19 +20,18 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      padding: 0 1.5em;
+      overflow: scroll;
 
       .place {
-        display: flex;
-        flex-direction: column;
-        height: 50px;
+        display: inline-flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 40px;
+        padding: 0 5px;
+        cursor: pointer;
 
-        .name {
-          display: inline-block;
-        }
-
-        .address {
-          display: inline-block;
+        &:hover {
+          background: #eee;
         }
       }
     }
