--- a/imports/ui/styles/components/_weather.scss
+++ b/imports/ui/styles/components/_weather.scss
@@ -5,4 +5,24 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1em;
+
+  .wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    height: auto;
+
+    img {
+      width: 50px;
+      height: inherit;
+    }
+
+    .temp {
+      width: 85%;
+      display: inline-flex;
+      align-items: center;
+      justify-content: space-around;
+    }
+  }
 }
