--- a/imports/ui/styles/components/_weather.scss
+++ b/imports/ui/styles/components/_weather.scss
@@ -22,7 +22,7 @@
       width: 85%;
       display: inline-flex;
       align-items: center;
-      justify-content: space-around;
+      justify-content: space-between;
     }
   }
 }
